syntax = "proto3";

package vertis.broker.pipeline.ch.sink.converter;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "broker/broker_options.proto";
import "test.proto";

option java_package = "vertis.broker.pipeline.ch.sink.converter";
option java_multiple_files = true;

message Event {
    enum EventType {
        UNKNOWN_EVENT = 0;
        SEARCH = 1;
        SNIPPET_SHOW = 2;
        CARD_VIEW = 3;
        PHONE_CALL = 4;
        CHAT_INIT = 5;
        ADD_OFFER_TO_FAVORITES = 6;
    }

    option (.broker.config) = {
        name: "general/event"
        testing_only: true
        yt {
            sort_by: ["timestamp"]
        }
        clickhouse: {
            cluster: "general"
            db: "stats"
            table: "event"
            expire_in_days: 180
        }
    };

    string event_id = 1;
    google.protobuf.Timestamp timestamp = 2 [(.broker.include_to_ch) = true];
    google.protobuf.Timestamp event_time = 3;

    string query_id = 6;

    SimpleMessage simple = 7 [(.broker.include_to_ch) = true];

    EventType event_type = 8 [(.broker.include_to_ch) = true];
    google.protobuf.StringValue offer_id = 9 [(.broker.include_to_ch) = true];

}

message EventTs {
    option (.broker.config) = {
        name: "general/event"
        testing_only: true
        yt {
            sort_by: ["timestamp"]
        }
        clickhouse: {
            cluster: "general"
            db: "stats"
            table: "event"
            expire_in_days: 180
        }
    };

    string event_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    google.protobuf.Timestamp event_time = 3;

    google.protobuf.StringValue offerId = 9 [(.broker.include_to_ch) = true];
}

message EventCustomTs {
    option (.broker.config) = {
        name: "general/event"
        testing_only: true
        yt {
            sort_by: ["timestamp"]
        }
        clickhouse: {
            cluster: "general"
            db: "stats"
            table: "event"
            expire_in_days: 180
        }
    };

    string event_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    google.protobuf.Timestamp event_time = 3[(.broker.is_timestamp) = true];

    google.protobuf.StringValue offerId = 9 [(.broker.include_to_ch) = true];
}
