syntax = "proto3";

package realty.rent.api;

option java_package = "ru.yandex.realty.rent.proto.api.internal";
option java_multiple_files = true;

import "options.proto";
import "google/protobuf/timestamp.proto";
import "realty/api/response.proto";

message SetSmsRequestExpirationTime {
    message Request {
        string owner_request_id = 1 [(required) = true];
        string sms_request_id = 2 [(required) = true];
        google.protobuf.Timestamp new_expiration_time = 3 [(required) = true];
    }
}

service TestingUtilsService {
    rpc SetSmsRequestExpirationTime(SetSmsRequestExpirationTime.Request) returns (realty.api.ApiUnit);
}
